# probable-enigma

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
src/: ai.py  config.py  connection.py  database.py  helper.py  instances.py  main.py  model.py  router.py  socket.py  twilio_message.py  websocket.py
src/config/: config.py
src/exports/: instances.py
src/models/: ai.py  model.py
src/repo/: ai.py  database.py
src/routers/: router.py  websocket.py
ui/: bun.lockb  package.json
ui/src/app/: StoreProvider.tsx  layout.tsx  page.tsx
ui/src/app/[location]/[clinicname]/: page.tsx
ui/src/app/components/: ChatMode..tsx  Complete.tsx  Fetching.tsx  FormMode.tsx  Otp.tsx  SelectMode.tsx  Toast.tsx  UploadKyc.tsx  Verification.tsx
ui/src/app/constants/: creds.ts  enums.ts
ui/src/app/lib/: store.tsx
ui/src/app/lib/features/: detailsSelection.ts  otpSlection.ts  pageSelection.ts
ui/src/app/types/: documents.ts
ui/src/hooks/: useToast.tsx
ui/src/lib/features/: detailsSelection.ts  otpSlection.ts  pageSelection.ts
ui/src/types/: documents.ts
